--- a/src/Presentation/TicketManagement.API/appsettings.Development.json
+++ b/src/Presentation/TicketManagement.API/appsettings.Development.json
@@ -10,14 +10,14 @@
   "AllowedHosts": "*",
 
   "_comment_secrets": "⚠️ For development, use 'dotnet user-secrets' to set JwtSettings:Secret and ConnectionStrings:DefaultConnection",
-  
+
   "ConnectionStrings": {
-    "DefaultConnection": "",
+    "DefaultConnection": "Server=localhost;Database=ticketmanagementdb;User Id=root;Password=;",
     "Redis": "localhost:6379"
   },
 
   "JwtSettings": {
-    "Secret": "",
+    "Secret": "tu-secret-key-muy-larga-y-segura-aqui-minimo-32-caracteres",
     "Issuer": "https://localhost:7001",
     "Audience": "https://localhost:7001",
     "ExpirationMinutes": 120,
@@ -77,7 +77,7 @@
 
   "AttachmentSettings": {
     "MaxFileSizeBytes": 52428800,
-    "AllowedExtensions": [".jpg", ".jpeg", ".png", ".gif", ".pdf", ".doc", ".docx", ".txt", ".zip"],
+    "AllowedExtensions": [ ".jpg", ".jpeg", ".png", ".gif", ".pdf", ".doc", ".docx", ".txt", ".zip" ],
     "StoragePath": "./uploads"
   },
 
